# aigc-fullstack

./: .env.example  .gitignore  AGENTS.md  README.md  ai_fullstack_engineer_roadmap.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/admin/: Dockerfile  index.html  package.json  vite.config.ts
apps/ai-service/: .dockerignore  Dockerfile  package.json  pyproject.toml
apps/ai-service/src/: config.py  contracts.py  main.py  observability.py  rabbitmq.py  storage.py  worker_main.py
apps/ai-service/src/providers/: __init__.py  base.py  mock_provider.py  openai_provider.py  registry.py
apps/ai-service/src/workers/: image_generate_worker.py  result_messages.py
apps/ai-service/tests/: test_result_messages.py
apps/api/: .dockerignore  Dockerfile  package.json  (+1 more)
docs/: admin-user-management.md  aigc-ai-service-monorepo-decision.md  aigc-asset-lifecycle-and-storage.md  aigc-backend-fastapi-nestjs-architecture.md  aigc-billing-consistency.md  aigc-generation-feature.md  aigc-idempotency-and-attempt.md  aigc-moderation-and-risk-control.md  aigc-monorepo-architecture.md  aigc-observability-and-ops.md  aigc-queue-rabbitmq-vs-bullmq.md  aigc-realtime-sse-vs-websocket.md  asset-api.md  auth-account-model.md  auth-api.md  deployment.md  documentation-style-guide.md  e2e-testing.md  env.md  feature-manifest.md  feature-registry.md  generalized-platform-roadmap.md  local-browser-verification.md  local-development.md  model-provider-architecture.md  platform-core-architecture.md  project-module.md  task-contracts.md  web-asset-upload-verification.md
(+122 files in other folders)
